Travel::Status::DE::IRIS 1.89 - Sat Aug 19 2023

    * Update stations list

Travel::Status::DE::IRIS 1.88 - Sat Aug 05 2023

    * Update stations list

Travel::Status::DE::IRIS 1.87 - Sun Jul 09 2023

    * Update stations list

Travel::Status::DE::IRIS 1.86 - Sun Jun 04 2023

    * Update stations list

Travel::Status::DE::IRIS 1.85 - Mon May 29 2023

    * Update stations list

Travel::Status::DE::IRIS 1.84 - Sun Apr 30 2023

    * Update stations list
    * Add QoS code 78

Travel::Status::DE::IRIS 1.83 - Thu Apr 13 2023

    * Update stations list

Travel::Status::DE::IRIS 1.82 - Mon Mar 13 2023

    * Add delay code 81

Travel::Status::DE::IRIS 1.81 - Thu Jan 05 2023

    * Update stations list

Travel::Status::DE::IRIS 1.80 - Wed Dec 26 2022

    * Update stations list
    * Fix MANIFEST (broken in 1.79)

Travel::Status::DE::IRIS 1.79 - Wed Dec 26 2022

    * Stations: Further geoocordinate fixes for Dutch stations.

Travel::Status::DE::IRIS 1.78 - Wed Dec 21 2022

    * Stations: Fix geocoordinates for a variety of Dutch stations.
      In some cases, they were off by several hundred kilometers.

Travel::Status::DE::IRIS 1.77 - Mon Dec 12 2022

    * Handle "Betriebsstelle nicht bekannt" in routes.
    * Update station list

Travel::Status::DE::IRIS 1.76 - Sun Dec 11 2022

    * Improve handling of stations that are not yet present in IRIS
      ("Betriebsstelle nicht bekannt 1234567")
    * Update station list

Travel::Status::DE::IRIS 1.75 - Sun Dec 04 2022

    * Update station list
    * Note that station names are no longer considered unique.
      get_stations() and the get_station_by_... set of functions may return
      multiple entries with the same name, but different DS100 and EVA IDs.
      For now, get_station_by_name() retains its behaviour of only returning a
      single match if the name matches exactly -- for multiple stations with
      the same name, it returns the one with the lowest EVA number.