@@ -6,7 +6,7 @@ use utf8;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '1.89';
+our $VERSION = '1.90';
 
 use DateTime;
 use DateTime::Format::Strptime;
@@ -573,7 +573,7 @@ B<db-iris> [B<-rx>] [B<-d> I<date>] [B<-o> I<output-flags>]
 
 =head1 VERSION
 
-version 1.89
+version 1.90
 
 =head1 DESCRIPTION
 
